--- a/Module_2/Lab 2.2/src/index.css
+++ b/Module_2/Lab 2.2/src/index.css
@@ -10,7 +10,7 @@ article {   /* I. Selectors */
 #style-me2{
     color: blue;
 }
-.style-me1 #style-me2{ /* Help*/
+.style-me1#style-me2{ /* Help*/
     color: purple;
 }
 
@@ -66,12 +66,65 @@ background-color: aqua;
 
 
 /* IV. Styling text */
-/* Put styles for questions 1-10 here */
+.text-style { 
+    color: blue;      
+    font-size: 25px;
+    line-height: 30px;   
+    font-weight: 900; 
+    font-family: sans-serif; /*HELP*/     /* Put styles for questions 1-10 here */
+    text-align: center;
+    letter-spacing: 2px;
+    word-spacing: 5px;
+    text-transform: capitalize;
+    text-decoration:line-through;
+
+}   
 
 
 /* V. Styling links */
 /* Put styles for questions 1-3 here */
 
 
-/* VI. calc() */
-/* Put styles for questions 1-3 here */
+a:link {
+    color: blue;
+    font-size: 14px;
+    font-weight: 800;
+    text-decoration: underline;
+  }    
+
+a:hover {
+color: peru;
+text-decoration: overline;
+}
+
+a:active{
+    color:aqua;
+    text-decoration: dotted;
+}
+
+a:focus{
+    color: brown;
+    text-decoration: wavy;
+}
+
+a:visited{
+    color: red;
+    font-style: italic;
+    
+}
+
+.calc-style{                          /* VI. calc() */ /* Put styles for questions 1-3 here */
+    width: 110vw;
+    background-color: blueviolet;
+    width: calc(100vw - 100px);
+}  
+
+.fixed-width-col{
+    width: 350px;
+    display: inline-block;
+}
+
+.fluid-col{
+    display: inline-block;
+    
+}
