--- a/Module_2/Lab 2.3/index.css
+++ b/Module_2/Lab 2.3/index.css
@@ -44,10 +44,23 @@ a {
 
 .flex-container{ /* 2. Basic flexbox */
   display: flex;
+  flex-direction: row;
 }
 
-.flex-container > div{
-    .flex-item-1: 1;
+.flex-item-1{
+    flex:1;
+}
+
+.flex-item-2{
+    flex:2;
+}
+
+.flex-item-3{
+    flex:3;
+}
+
+.flex-item-4{
+    flex:4;
 }
 
 .flex-center{              /* 3. Centering with flexbox*/
@@ -56,7 +69,7 @@ align-items: center;
 }            
 
 .flex-space-between{        /*4. Assigning leftover space*/
-justify-content: center;
+justify-content: space-between;
 }
 
 
@@ -69,15 +82,23 @@ justify-content: center;
     flex-basis: 25%;
 }
 
-.flex-container{
-flex-direction:
-}
 
 .flex-menu{
-    justify-content: right;
+    list-style: none;
+    margin: 0;
+    padding: 0;
     justify-content: center;
-    flex-grow: 1;
-    justify-content: center;
+}
+.flex-menu li{
+padding: 1em;
+margin: 0 1px;
+flex-grow: 1;
+text-align: center;
+}
+
+.flex-menu li a{
+    color: black;
+    font-weight: bold;
 }
 
 .fourth-item{
